# food-delivery-order-system

./: CMakeLists.txt
Delivery/: CMakeLists.txt
Delivery/cpp/: main.cpp
Delivery/cpp/include/: Client.h  ClientRepository.h  Courier.h  CourierRepository.h  DeliverySystem.h  IRepository.h  JsonStorage.h  MenuItem.h  MenuRepository.h  Order.h  OrderItem.h  OrderRepository.h
Delivery/cpp/src/: Client.cpp  ClientRepository.cpp  Courier.cpp  CourierRepository.cpp  DeliverySystem.cpp  JsonStorage.cpp  MenuItem.cpp  MenuRepositiry.cpp  Order.cpp  OrderItem.cpp  OrderRepository.cpp  bindings.cpp
Delivery/gui/: app.py  delivery.cp312-win_amd64.pyd  delivery.pyd  main.py  test.py
Delivery/gui/services/: DeliveryAdapter.py
Delivery/gui/widgets/: ClientTable.py  CourierTable.py  MenuTable.py  OrderTable.py
Delivery/gui/windows/: AddClientWindow.py  AddCourierWindow.py  AddMenuItemWindow.py  ClientsPage.py  CouriersPage.py  CreateOrderWindow.py  EditClientWindow.py  EditCourierWindow.py  EditMenuItemWindow.py  EditOrderWindow.py  MainWindow.py  MenuPage.py  OrdersPage.py
Delivery/python/: bindings.cpp
data/: clients.json  couriers.json  menu.json  orders.json
